display balance of tokens in dash board and send panel